--- a/src/screen.css
+++ b/src/screen.css
@@ -2,41 +2,89 @@
     position: relative;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(20, 21, 21);
+    background-color: rgb(35, 43, 40);
 }
 
 #scan, 
-#bezel{
+#grid {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     pointer-events: none;
-    z-index: 1;
 }
 
 #scan {
-    opacity: 40%;
+    opacity: 45%;
+    z-index: 1;
 }
 
-#bezel {
-    opacity: 0%;
+#grid {
+    opacity: 10%;
+    filter: blur(2px);
 }
 
-#content{
+#content, #topnav, #welcome, #planet {
     font-family: 'VT32', monospace;
-    color: rgb(121, 219, 213);
-    text-shadow: 1px 1px 2px rgb(149, 197, 185), 0 0 1em rgb(149, 197, 185), 0 0 0.2em rgb(149, 197, 185);
+    color: rgb(100, 234, 183);
+    text-shadow: 1px 1px 2px rgb(100, 234, 183), 0 0 1em rgb(100, 234, 183), 0 0 0.2em rgb(100, 234, 183);
 }
 
-#title {
+#topnav {
     position: absolute;
-    top: 10px;
-    width: 50%;
-    text-align: center;
-    transform: translateX(50%);
+    border: 2px double rgb(100, 234, 183);
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 97%;
+    background-color: rgb(35, 43, 40);
+}
+
+#topnav ul {
+    list-style-type: none;
     margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+#topnav ul li {
+    display: block;
+    float: left;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#welcome {
+    position: absolute;
+    margin: auto;
+    height: 64%;
+    padding: 80px;
+    border: 2px groove rgb(100, 234, 183);
+    border-radius: 5px;
+    margin-top: 80px;
+    margin-left: 20px;
+    background-color: rgb(35, 43, 40);
+}
+
+#planet {
+    position: absolute;
+    bottom: 20px;
+    right: 40px;
+    width: 42%;
+    height: 220px;
+    opacity: 100%;
+    font-size: 5px;
+    line-height: 1.1;
+    white-space: pre;
+    border: 2px groove rgb(100, 234, 183);
+    border-radius: 5px;
+    background-color: rgb(35, 43, 40);
+}
+
+#planet pre {
+    margin-left: 200px;
 }
 
 .noselect {
