--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-body {
+html, body {
   background-color: rgb(15, 15, 15);
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
+  overflow: hidden; 
 }
