--- a/src/screen.css
+++ b/src/screen.css
@@ -56,24 +56,38 @@
     text-decoration: none;
 }
 
+#topnav ul li a {
+    color: rgb(100, 234, 183);
+    text-decoration: none;
+}
+
+#topnav ul li {
+    transition: transform 0.15s ease, text-shadow 0.15s ease;
+}
+
+#topnav ul li:hover {
+    transform: scale(1.15);
+    text-shadow: 1px 1px 2px rgb(100, 234, 183), 0 0 1em rgb(100, 234, 183), 0 0 0.2em rgb(100, 234, 183);
+}
+
 #welcome {
     position: absolute;
-    margin: auto;
-    height: 64%;
+    height: 65%;
+    width: 42%;
     padding: 80px;
     border: 2px groove rgb(100, 234, 183);
     border-radius: 5px;
-    margin-top: 80px;
-    margin-left: 20px;
+    margin-top: 11vh;
+    margin-left: 1vw;
     background-color: rgb(35, 43, 40);
 }
 
 #planet {
     position: absolute;
-    bottom: 20px;
+    bottom: 7px;
     right: 40px;
     width: 42%;
-    height: 220px;
+    height: 37%;
     opacity: 100%;
     font-size: 5px;
     line-height: 1.1;
@@ -85,6 +99,17 @@
 
 #planet pre {
     margin-left: 200px;
+}
+
+#photo_window {
+    border: 2px groove rgb(100, 234, 183);
+    border-radius: 5px;
+    position: absolute;
+    top: 80px;
+    right: 40px;
+    width: 42%;
+    height: 50%;
+    background-color: rgb(35, 43, 40);
 }
 
 .noselect {
