--- a/src/screen.css
+++ b/src/screen.css
@@ -8,10 +8,10 @@
     "links links";
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr auto;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background-color: rgb(24, 27, 26);
-  overflow: scroll;
+  overflow: hidden;
 }
 
 /* === SCANLINES & GRID OVERLAY === */
