--- a/src/screen.css
+++ b/src/screen.css
@@ -41,16 +41,24 @@
 #screen * {
   font-family: 'VT32', monospace;
   color: rgb(100, 234, 183);
-  text-shadow: 1px 1px 2px rgb(100, 234, 183),
-               0 0 1em rgb(100, 234, 183),
-               0 0 0.2em rgb(100, 234, 183);
+  text-shadow: 1px 1px .2px rgb(63, 104, 88),
+               0 0 1em rgb(63, 104, 88),
+               0 0 1em rgb(63, 104, 88);
 }
 
 /* === NAVBAR === */
 #topnav {
   grid-area: nav;
-  margin: 20px;
-  z-index: 2;
+  position: fixed;
+  top: 0;
+  padding: 12px;
+  z-index: 20;
+  width: 100vw;
+  backdrop-filter: blur(2px);
+  background-color: rgba(24, 27, 26, 0.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #topnav ul {
@@ -83,7 +91,6 @@
 }
 
 #topnav button.active {
-  text-underline-offset: 6px;
   color: rgb(240, 240, 224);
 }
 
@@ -124,15 +131,14 @@
 #topnav,
 #links {
   justify-self: center;      
-  width: fit-content;        
-  padding: 8px 16px;
+  padding: 8px 20px;
 }
 
 /* === WELCOME SECTION === */
 #welcome {
   grid-area: welcome;
-  padding: 10px;
-  margin: 20px;
+  padding-top: 150px;
+  padding-left: 40px;
   overflow-y: hidden;
   z-index: 2;
 }
@@ -189,6 +195,24 @@
   #links ul li a {
     font-size: 1.3rem;
   }
+}
+
+/* === Resume === */
+#resume {
+  padding-top: 100px;
+  padding-left: 40px;
+  white-space: normal;
+  word-break: keep-all;
+}
+
+#resume a {
+  text-decoration: none;
+}
+
+#resume a:hover{
+  color: rgb(230, 241, 237);
+  text-decoration: none;
+  transition: color 0.2s ease;
 }
 
 /* === DISABLE TEXT SELECTION FOR OVERLAYS === */
